// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HCMConnector getWork correctly transforms data from poll work 1`] = `
Array [
  Object {
    "NodeDetails": Object {
      "Annotations": Object {
        "node.alpha.kubernetes.io/ttl": "0",
        "volumes.kubernetes.io/controller-managed-attach-detach": "true",
      },
      "Arch": "amd64",
      "Cpu": "4",
      "IP": "",
      "Images": null,
      "KernelVersion": "4.4.0-124-generic",
      "KubeProxyVersion": "v1.10.0+icp-ee",
      "KubeletVersion": "v1.10.0+icp-ee",
      "Labels": Object {
        "beta.kubernetes.io/arch": "amd64",
        "beta.kubernetes.io/os": "linux",
        "gpu/nvidia": "NA",
        "kubernetes.io/hostname": "9.37.137.174",
      },
      "Mem": "8174900Ki",
      "Node": "9.37.137.174",
      "OSImage": "Ubuntu 16.04.4 LTS",
      "Status": "Ready",
      "TotalImageSpace": 4434973565,
    },
    "NodeName": "9.37.137.174",
    "State": true,
    "cluster": "crucial-owl",
    "name": "9.37.137.174",
  },
  Object {
    "NodeDetails": Object {
      "Annotations": Object {
        "node.alpha.kubernetes.io/ttl": "0",
        "volumes.kubernetes.io/controller-managed-attach-detach": "true",
      },
      "Arch": "amd64",
      "Cpu": "4",
      "IP": "",
      "Images": null,
      "KernelVersion": "4.4.0-124-generic",
      "KubeProxyVersion": "v1.10.0+icp-ee",
      "KubeletVersion": "v1.10.0+icp-ee",
      "Labels": Object {
        "beta.kubernetes.io/arch": "amd64",
        "beta.kubernetes.io/os": "linux",
        "gpu/nvidia": "NA",
        "kubernetes.io/hostname": "9.37.137.92",
      },
      "Mem": "8174900Ki",
      "Node": "9.37.137.92",
      "OSImage": "Ubuntu 16.04.4 LTS",
      "Status": "Ready",
      "TotalImageSpace": 6246475129,
    },
    "NodeName": "9.37.137.92",
    "State": true,
    "cluster": "crucial-owl",
    "name": "9.37.137.92",
  },
  Object {
    "NodeDetails": Object {
      "Annotations": Object {
        "node.alpha.kubernetes.io/ttl": "0",
        "volumes.kubernetes.io/controller-managed-attach-detach": "true",
      },
      "Arch": "amd64",
      "Cpu": "8",
      "IP": "",
      "Images": null,
      "KernelVersion": "4.4.0-121-generic",
      "KubeProxyVersion": "v1.10.0+icp-ee",
      "KubeletVersion": "v1.10.0+icp-ee",
      "Labels": Object {
        "beta.kubernetes.io/arch": "amd64",
        "beta.kubernetes.io/os": "linux",
        "etcd": "true",
        "gpu/nvidia": "NA",
        "kubernetes.io/hostname": "9.42.23.230",
        "management": "true",
        "master": "true",
        "proxy": "true",
        "role": "master",
      },
      "Mem": "16431836Ki",
      "Node": "9.42.23.230",
      "OSImage": "Ubuntu 16.04.4 LTS",
      "Status": "Ready",
      "TotalImageSpace": 22502834219,
    },
    "NodeName": "9.42.23.230",
    "State": true,
    "cluster": "crucial-owl",
    "name": "9.42.23.230",
  },
  Object {
    "NodeDetails": Object {
      "Annotations": Object {
        "node.alpha.kubernetes.io/ttl": "0",
        "volumes.kubernetes.io/controller-managed-attach-detach": "true",
      },
      "Arch": "amd64",
      "Cpu": "4",
      "IP": "",
      "Images": null,
      "KernelVersion": "4.4.0-124-generic",
      "KubeProxyVersion": "v1.10.0+icp-ee",
      "KubeletVersion": "v1.10.0+icp-ee",
      "Labels": Object {
        "beta.kubernetes.io/arch": "amd64",
        "beta.kubernetes.io/os": "linux",
        "gpu/nvidia": "NA",
        "kubernetes.io/hostname": "9.42.1.134",
        "management": "true",
      },
      "Mem": "8174900Ki",
      "Node": "9.42.1.134",
      "OSImage": "Ubuntu 16.04.4 LTS",
      "Status": "Ready",
      "TotalImageSpace": 5673335523,
    },
    "NodeName": "9.42.1.134",
    "State": true,
    "cluster": "myminikube",
    "name": "9.42.1.134",
  },
  Object {
    "NodeDetails": Object {
      "Annotations": Object {
        "node.alpha.kubernetes.io/ttl": "0",
        "volumes.kubernetes.io/controller-managed-attach-detach": "true",
      },
      "Arch": "amd64",
      "Cpu": "4",
      "IP": "",
      "Images": null,
      "KernelVersion": "4.4.0-128-generic",
      "KubeProxyVersion": "v1.10.0+icp-ee",
      "KubeletVersion": "v1.10.0+icp-ee",
      "Labels": Object {
        "beta.kubernetes.io/arch": "amd64",
        "beta.kubernetes.io/os": "linux",
        "etcd": "true",
        "gpu/nvidia": "NA",
        "kubernetes.io/hostname": "9.42.23.217",
        "master": "true",
        "proxy": "true",
        "role": "master",
      },
      "Mem": "16432432Ki",
      "Node": "9.42.23.217",
      "OSImage": "Ubuntu 16.04.4 LTS",
      "Status": "Ready",
      "TotalImageSpace": 20603800838,
    },
    "NodeName": "9.42.23.217",
    "State": true,
    "cluster": "myminikube",
    "name": "9.42.23.217",
  },
]
`;

exports[`HCMConnector pollWork polls and returns data 1`] = `
Object {
  "crucial-owl": Object {
    "Completed": true,
    "Request": Object {
      "ClientID": "",
      "Completed": false,
      "Description": "",
      "Dryrun": false,
      "DstClusters": Object {
        "Labels": null,
        "Names": Array [
          "crucial-owl",
        ],
        "SortBy": "",
        "Status": Array [
          "healthy",
        ],
        "TargetNum": 0,
      },
      "FinishedRequest": Object {
        "ClientID": "",
        "Completed": false,
        "Description": "",
        "Dryrun": false,
        "DstClusters": Object {
          "Labels": null,
          "Names": Array [
            "crucial-owl",
          ],
          "SortBy": "",
          "Status": Array [
            "healthy",
          ],
          "TargetNum": 0,
        },
        "FinishedRequest": null,
        "NextRequest": null,
        "Operation": "get",
        "Resource": "nodes",
        "RootRequest": null,
        "SrcClusters": Object {
          "Labels": null,
          "Names": null,
          "SortBy": "",
          "Status": null,
          "TargetNum": 0,
        },
        "Timestamp": "2018-07-02T15:09:10.561Z",
        "UUID": "b136aa2f-e9f6-4c18-955a-5c67afdf4509",
        "Work": Object {
          "Labels": "",
          "Namespaces": "",
          "Status": "",
        },
      },
      "NextRequest": null,
      "Operation": "get",
      "Resource": "nodes",
      "RootRequest": null,
      "SrcClusters": Object {
        "Labels": null,
        "Names": null,
        "SortBy": "",
        "Status": null,
        "TargetNum": 0,
      },
      "Timestamp": "2018-07-02T15:09:10.561Z",
      "UUID": "b136aa2f-e9f6-4c18-955a-5c67afdf4509",
      "Work": Object {
        "Labels": "",
        "Namespaces": "",
        "Status": "",
      },
    },
    "Results": Object {
      "9.37.137.174": Object {
        "NodeDetails": Object {
          "Annotations": Object {
            "node.alpha.kubernetes.io/ttl": "0",
            "volumes.kubernetes.io/controller-managed-attach-detach": "true",
          },
          "Arch": "amd64",
          "Cpu": "4",
          "IP": "",
          "Images": null,
          "KernelVersion": "4.4.0-124-generic",
          "KubeProxyVersion": "v1.10.0+icp-ee",
          "KubeletVersion": "v1.10.0+icp-ee",
          "Labels": Object {
            "beta.kubernetes.io/arch": "amd64",
            "beta.kubernetes.io/os": "linux",
            "gpu/nvidia": "NA",
            "kubernetes.io/hostname": "9.37.137.174",
          },
          "Mem": "8174900Ki",
          "Node": "9.37.137.174",
          "OSImage": "Ubuntu 16.04.4 LTS",
          "Status": "Ready",
          "TotalImageSpace": 4434973565,
        },
        "NodeName": "9.37.137.174",
        "State": true,
      },
      "9.37.137.92": Object {
        "NodeDetails": Object {
          "Annotations": Object {
            "node.alpha.kubernetes.io/ttl": "0",
            "volumes.kubernetes.io/controller-managed-attach-detach": "true",
          },
          "Arch": "amd64",
          "Cpu": "4",
          "IP": "",
          "Images": null,
          "KernelVersion": "4.4.0-124-generic",
          "KubeProxyVersion": "v1.10.0+icp-ee",
          "KubeletVersion": "v1.10.0+icp-ee",
          "Labels": Object {
            "beta.kubernetes.io/arch": "amd64",
            "beta.kubernetes.io/os": "linux",
            "gpu/nvidia": "NA",
            "kubernetes.io/hostname": "9.37.137.92",
          },
          "Mem": "8174900Ki",
          "Node": "9.37.137.92",
          "OSImage": "Ubuntu 16.04.4 LTS",
          "Status": "Ready",
          "TotalImageSpace": 6246475129,
        },
        "NodeName": "9.37.137.92",
        "State": true,
      },
      "9.42.23.230": Object {
        "NodeDetails": Object {
          "Annotations": Object {
            "node.alpha.kubernetes.io/ttl": "0",
            "volumes.kubernetes.io/controller-managed-attach-detach": "true",
          },
          "Arch": "amd64",
          "Cpu": "8",
          "IP": "",
          "Images": null,
          "KernelVersion": "4.4.0-121-generic",
          "KubeProxyVersion": "v1.10.0+icp-ee",
          "KubeletVersion": "v1.10.0+icp-ee",
          "Labels": Object {
            "beta.kubernetes.io/arch": "amd64",
            "beta.kubernetes.io/os": "linux",
            "etcd": "true",
            "gpu/nvidia": "NA",
            "kubernetes.io/hostname": "9.42.23.230",
            "management": "true",
            "master": "true",
            "proxy": "true",
            "role": "master",
          },
          "Mem": "16431836Ki",
          "Node": "9.42.23.230",
          "OSImage": "Ubuntu 16.04.4 LTS",
          "Status": "Ready",
          "TotalImageSpace": 22502834219,
        },
        "NodeName": "9.42.23.230",
        "State": true,
      },
    },
    "Timestamp": "2018-07-02T15:09:11.598786712Z",
  },
  "myminikube": Object {
    "Completed": true,
    "Request": Object {
      "ClientID": "",
      "Completed": false,
      "Description": "",
      "Dryrun": false,
      "DstClusters": Object {
        "Labels": null,
        "Names": Array [
          "crucial-owl",
        ],
        "SortBy": "",
        "Status": Array [
          "healthy",
        ],
        "TargetNum": 0,
      },
      "FinishedRequest": Object {
        "ClientID": "",
        "Completed": false,
        "Description": "",
        "Dryrun": false,
        "DstClusters": Object {
          "Labels": null,
          "Names": Array [
            "crucial-owl",
          ],
          "SortBy": "",
          "Status": Array [
            "healthy",
          ],
          "TargetNum": 0,
        },
        "FinishedRequest": null,
        "NextRequest": null,
        "Operation": "get",
        "Resource": "nodes",
        "RootRequest": null,
        "SrcClusters": Object {
          "Labels": null,
          "Names": null,
          "SortBy": "",
          "Status": null,
          "TargetNum": 0,
        },
        "Timestamp": "2018-07-02T15:09:10.561Z",
        "UUID": "b136aa2f-e9f6-4c18-955a-5c67afdf4509",
        "Work": Object {
          "Labels": "",
          "Namespaces": "",
          "Status": "",
        },
      },
      "NextRequest": null,
      "Operation": "get",
      "Resource": "nodes",
      "RootRequest": null,
      "SrcClusters": Object {
        "Labels": null,
        "Names": null,
        "SortBy": "",
        "Status": null,
        "TargetNum": 0,
      },
      "Timestamp": "2018-07-02T15:09:10.561Z",
      "UUID": "b136aa2f-e9f6-4c18-955a-5c67afdf4509",
      "Work": Object {
        "Labels": "",
        "Namespaces": "",
        "Status": "",
      },
    },
    "Results": Object {
      "9.42.1.134": Object {
        "NodeDetails": Object {
          "Annotations": Object {
            "node.alpha.kubernetes.io/ttl": "0",
            "volumes.kubernetes.io/controller-managed-attach-detach": "true",
          },
          "Arch": "amd64",
          "Cpu": "4",
          "IP": "",
          "Images": null,
          "KernelVersion": "4.4.0-124-generic",
          "KubeProxyVersion": "v1.10.0+icp-ee",
          "KubeletVersion": "v1.10.0+icp-ee",
          "Labels": Object {
            "beta.kubernetes.io/arch": "amd64",
            "beta.kubernetes.io/os": "linux",
            "gpu/nvidia": "NA",
            "kubernetes.io/hostname": "9.42.1.134",
            "management": "true",
          },
          "Mem": "8174900Ki",
          "Node": "9.42.1.134",
          "OSImage": "Ubuntu 16.04.4 LTS",
          "Status": "Ready",
          "TotalImageSpace": 5673335523,
        },
        "NodeName": "9.42.1.134",
        "State": true,
      },
      "9.42.23.217": Object {
        "NodeDetails": Object {
          "Annotations": Object {
            "node.alpha.kubernetes.io/ttl": "0",
            "volumes.kubernetes.io/controller-managed-attach-detach": "true",
          },
          "Arch": "amd64",
          "Cpu": "4",
          "IP": "",
          "Images": null,
          "KernelVersion": "4.4.0-128-generic",
          "KubeProxyVersion": "v1.10.0+icp-ee",
          "KubeletVersion": "v1.10.0+icp-ee",
          "Labels": Object {
            "beta.kubernetes.io/arch": "amd64",
            "beta.kubernetes.io/os": "linux",
            "etcd": "true",
            "gpu/nvidia": "NA",
            "kubernetes.io/hostname": "9.42.23.217",
            "master": "true",
            "proxy": "true",
            "role": "master",
          },
          "Mem": "16432432Ki",
          "Node": "9.42.23.217",
          "OSImage": "Ubuntu 16.04.4 LTS",
          "Status": "Ready",
          "TotalImageSpace": 20603800838,
        },
        "NodeName": "9.42.23.217",
        "State": true,
      },
    },
    "Timestamp": "2018-07-02T15:09:12.101044838Z",
  },
}
`;

exports[`HCMConnector pollWork throws GenericError if poll times out 1`] = `[GenericError: A generic error has occurred]`;

exports[`HCMConnector processRequest returns parsed response if JSON.parse succeeds 1`] = `
Object {
  "Completed": true,
  "Request": Object {
    "ClientID": "",
    "Completed": false,
    "Description": "",
    "Dryrun": false,
    "DstClusters": Object {
      "Labels": null,
      "Names": Array [
        "crucial-owl",
      ],
      "SortBy": "",
      "Status": Array [
        "healthy",
      ],
      "TargetNum": 0,
    },
    "FinishedRequest": Object {
      "ClientID": "",
      "Completed": false,
      "Description": "",
      "Dryrun": false,
      "DstClusters": Object {
        "Labels": null,
        "Names": Array [
          "crucial-owl",
        ],
        "SortBy": "",
        "Status": Array [
          "healthy",
        ],
        "TargetNum": 0,
      },
      "FinishedRequest": null,
      "NextRequest": null,
      "Operation": "get",
      "Resource": "nodes",
      "RootRequest": null,
      "SrcClusters": Object {
        "Labels": null,
        "Names": null,
        "SortBy": "",
        "Status": null,
        "TargetNum": 0,
      },
      "Timestamp": "2018-07-02T15:09:10.561Z",
      "UUID": "b136aa2f-e9f6-4c18-955a-5c67afdf4509",
      "Work": Object {
        "Labels": "",
        "Namespaces": "",
        "Status": "",
      },
    },
    "NextRequest": null,
    "Operation": "get",
    "Resource": "nodes",
    "RootRequest": null,
    "SrcClusters": Object {
      "Labels": null,
      "Names": null,
      "SortBy": "",
      "Status": null,
      "TargetNum": 0,
    },
    "Timestamp": "2018-07-02T15:09:10.561Z",
    "UUID": "b136aa2f-e9f6-4c18-955a-5c67afdf4509",
    "Work": Object {
      "Labels": "",
      "Namespaces": "",
      "Status": "",
    },
  },
  "Results": Object {
    "crucial-owl": Object {
      "Completed": true,
      "Request": Object {
        "ClientID": "",
        "Completed": false,
        "Description": "",
        "Dryrun": false,
        "DstClusters": Object {
          "Labels": null,
          "Names": Array [
            "crucial-owl",
          ],
          "SortBy": "",
          "Status": Array [
            "healthy",
          ],
          "TargetNum": 0,
        },
        "FinishedRequest": Object {
          "ClientID": "",
          "Completed": false,
          "Description": "",
          "Dryrun": false,
          "DstClusters": Object {
            "Labels": null,
            "Names": Array [
              "crucial-owl",
            ],
            "SortBy": "",
            "Status": Array [
              "healthy",
            ],
            "TargetNum": 0,
          },
          "FinishedRequest": null,
          "NextRequest": null,
          "Operation": "get",
          "Resource": "nodes",
          "RootRequest": null,
          "SrcClusters": Object {
            "Labels": null,
            "Names": null,
            "SortBy": "",
            "Status": null,
            "TargetNum": 0,
          },
          "Timestamp": "2018-07-02T15:09:10.561Z",
          "UUID": "b136aa2f-e9f6-4c18-955a-5c67afdf4509",
          "Work": Object {
            "Labels": "",
            "Namespaces": "",
            "Status": "",
          },
        },
        "NextRequest": null,
        "Operation": "get",
        "Resource": "nodes",
        "RootRequest": null,
        "SrcClusters": Object {
          "Labels": null,
          "Names": null,
          "SortBy": "",
          "Status": null,
          "TargetNum": 0,
        },
        "Timestamp": "2018-07-02T15:09:10.561Z",
        "UUID": "b136aa2f-e9f6-4c18-955a-5c67afdf4509",
        "Work": Object {
          "Labels": "",
          "Namespaces": "",
          "Status": "",
        },
      },
      "Results": Object {
        "9.37.137.174": Object {
          "NodeDetails": Object {
            "Annotations": Object {
              "node.alpha.kubernetes.io/ttl": "0",
              "volumes.kubernetes.io/controller-managed-attach-detach": "true",
            },
            "Arch": "amd64",
            "Cpu": "4",
            "IP": "",
            "Images": null,
            "KernelVersion": "4.4.0-124-generic",
            "KubeProxyVersion": "v1.10.0+icp-ee",
            "KubeletVersion": "v1.10.0+icp-ee",
            "Labels": Object {
              "beta.kubernetes.io/arch": "amd64",
              "beta.kubernetes.io/os": "linux",
              "gpu/nvidia": "NA",
              "kubernetes.io/hostname": "9.37.137.174",
            },
            "Mem": "8174900Ki",
            "Node": "9.37.137.174",
            "OSImage": "Ubuntu 16.04.4 LTS",
            "Status": "Ready",
            "TotalImageSpace": 4434973565,
          },
          "NodeName": "9.37.137.174",
          "State": true,
        },
        "9.37.137.92": Object {
          "NodeDetails": Object {
            "Annotations": Object {
              "node.alpha.kubernetes.io/ttl": "0",
              "volumes.kubernetes.io/controller-managed-attach-detach": "true",
            },
            "Arch": "amd64",
            "Cpu": "4",
            "IP": "",
            "Images": null,
            "KernelVersion": "4.4.0-124-generic",
            "KubeProxyVersion": "v1.10.0+icp-ee",
            "KubeletVersion": "v1.10.0+icp-ee",
            "Labels": Object {
              "beta.kubernetes.io/arch": "amd64",
              "beta.kubernetes.io/os": "linux",
              "gpu/nvidia": "NA",
              "kubernetes.io/hostname": "9.37.137.92",
            },
            "Mem": "8174900Ki",
            "Node": "9.37.137.92",
            "OSImage": "Ubuntu 16.04.4 LTS",
            "Status": "Ready",
            "TotalImageSpace": 6246475129,
          },
          "NodeName": "9.37.137.92",
          "State": true,
        },
        "9.42.23.230": Object {
          "NodeDetails": Object {
            "Annotations": Object {
              "node.alpha.kubernetes.io/ttl": "0",
              "volumes.kubernetes.io/controller-managed-attach-detach": "true",
            },
            "Arch": "amd64",
            "Cpu": "8",
            "IP": "",
            "Images": null,
            "KernelVersion": "4.4.0-121-generic",
            "KubeProxyVersion": "v1.10.0+icp-ee",
            "KubeletVersion": "v1.10.0+icp-ee",
            "Labels": Object {
              "beta.kubernetes.io/arch": "amd64",
              "beta.kubernetes.io/os": "linux",
              "etcd": "true",
              "gpu/nvidia": "NA",
              "kubernetes.io/hostname": "9.42.23.230",
              "management": "true",
              "master": "true",
              "proxy": "true",
              "role": "master",
            },
            "Mem": "16431836Ki",
            "Node": "9.42.23.230",
            "OSImage": "Ubuntu 16.04.4 LTS",
            "Status": "Ready",
            "TotalImageSpace": 22502834219,
          },
          "NodeName": "9.42.23.230",
          "State": true,
        },
      },
      "Timestamp": "2018-07-02T15:09:11.598786712Z",
    },
    "myminikube": Object {
      "Completed": true,
      "Request": Object {
        "ClientID": "",
        "Completed": false,
        "Description": "",
        "Dryrun": false,
        "DstClusters": Object {
          "Labels": null,
          "Names": Array [
            "crucial-owl",
          ],
          "SortBy": "",
          "Status": Array [
            "healthy",
          ],
          "TargetNum": 0,
        },
        "FinishedRequest": Object {
          "ClientID": "",
          "Completed": false,
          "Description": "",
          "Dryrun": false,
          "DstClusters": Object {
            "Labels": null,
            "Names": Array [
              "crucial-owl",
            ],
            "SortBy": "",
            "Status": Array [
              "healthy",
            ],
            "TargetNum": 0,
          },
          "FinishedRequest": null,
          "NextRequest": null,
          "Operation": "get",
          "Resource": "nodes",
          "RootRequest": null,
          "SrcClusters": Object {
            "Labels": null,
            "Names": null,
            "SortBy": "",
            "Status": null,
            "TargetNum": 0,
          },
          "Timestamp": "2018-07-02T15:09:10.561Z",
          "UUID": "b136aa2f-e9f6-4c18-955a-5c67afdf4509",
          "Work": Object {
            "Labels": "",
            "Namespaces": "",
            "Status": "",
          },
        },
        "NextRequest": null,
        "Operation": "get",
        "Resource": "nodes",
        "RootRequest": null,
        "SrcClusters": Object {
          "Labels": null,
          "Names": null,
          "SortBy": "",
          "Status": null,
          "TargetNum": 0,
        },
        "Timestamp": "2018-07-02T15:09:10.561Z",
        "UUID": "b136aa2f-e9f6-4c18-955a-5c67afdf4509",
        "Work": Object {
          "Labels": "",
          "Namespaces": "",
          "Status": "",
        },
      },
      "Results": Object {
        "9.42.1.134": Object {
          "NodeDetails": Object {
            "Annotations": Object {
              "node.alpha.kubernetes.io/ttl": "0",
              "volumes.kubernetes.io/controller-managed-attach-detach": "true",
            },
            "Arch": "amd64",
            "Cpu": "4",
            "IP": "",
            "Images": null,
            "KernelVersion": "4.4.0-124-generic",
            "KubeProxyVersion": "v1.10.0+icp-ee",
            "KubeletVersion": "v1.10.0+icp-ee",
            "Labels": Object {
              "beta.kubernetes.io/arch": "amd64",
              "beta.kubernetes.io/os": "linux",
              "gpu/nvidia": "NA",
              "kubernetes.io/hostname": "9.42.1.134",
              "management": "true",
            },
            "Mem": "8174900Ki",
            "Node": "9.42.1.134",
            "OSImage": "Ubuntu 16.04.4 LTS",
            "Status": "Ready",
            "TotalImageSpace": 5673335523,
          },
          "NodeName": "9.42.1.134",
          "State": true,
        },
        "9.42.23.217": Object {
          "NodeDetails": Object {
            "Annotations": Object {
              "node.alpha.kubernetes.io/ttl": "0",
              "volumes.kubernetes.io/controller-managed-attach-detach": "true",
            },
            "Arch": "amd64",
            "Cpu": "4",
            "IP": "",
            "Images": null,
            "KernelVersion": "4.4.0-128-generic",
            "KubeProxyVersion": "v1.10.0+icp-ee",
            "KubeletVersion": "v1.10.0+icp-ee",
            "Labels": Object {
              "beta.kubernetes.io/arch": "amd64",
              "beta.kubernetes.io/os": "linux",
              "etcd": "true",
              "gpu/nvidia": "NA",
              "kubernetes.io/hostname": "9.42.23.217",
              "master": "true",
              "proxy": "true",
              "role": "master",
            },
            "Mem": "16432432Ki",
            "Node": "9.42.23.217",
            "OSImage": "Ubuntu 16.04.4 LTS",
            "Status": "Ready",
            "TotalImageSpace": 20603800838,
          },
          "NodeName": "9.42.23.217",
          "State": true,
        },
      },
      "Timestamp": "2018-07-02T15:09:12.101044838Z",
    },
  },
  "Timestamp": "2018-07-02T15:09:12.101044838Z",
}
`;

exports[`HCMConnector processRequest throws GenericError if network error occurs 1`] = `[GenericError: A generic error has occurred]`;
